<resources>
    <string name="app_name">ShoppingList</string>
    <string name="clear_list">Clear list</string>
    <string name="add_entry">Add entry</string>
    <string name="add_item_hint">Enter your task here</string>
    <string name="settings_menu_item_title">Settings</string>
    <string name="pref_bgd_color_title">Background Color</string>
    <string name="pref_bgd_color_summary">Pick a color for the background of the app</string>
    <string name="pref_background_color">pref_background_color</string>
    <string name="pref_clear_button">pref_clear_button</string>
    <string name="pref_clear_button_title">Enable clear button</string>
    <string name="pref_clear_button_summary">Enable or disable the clear list button</string>
</resources>
